# AudioScibe

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/audio_files/: __init__.py  models.py  routes.py  schemas.py  services.py  tasks.py  utils.py
backend/core/: config.py  database.py  exceptions.py  logger.py  worker.py
backend/migrations/: env.py
backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
